test/errors/int_main_nonzero_fail.hy
// This should be treated as a failing program: main returns a non-zero code.
int main()
{
    return 1
}